--- a/project/src/main/res/values-da/strings.xml
+++ b/project/src/main/res/values-da/strings.xml
@@ -596,6 +596,10 @@
     <string name="lx_select_ticket">Vælg billetter</string>
     <!-- Free cancellation text in offer  -->
     <string name="lx_free_cancellation">Gratis afbestilling</string>
+    <!-- Message for voucherless offers  -->
+    <string name="lx_voucherless_offer">Elektronisk værdikupon</string>
+    <!-- Message for voucherless offers  -->
+    <string name="lx_print_voucher_offer">Udskreven værdikupon påkrævet</string>
     <!-- Card brand not supported (e.g. "Visa not accepted") -->
     <string name="lx_does_not_accept_cardtype_TEMPLATE">%1$s accepteres ikke</string>
     <!-- LX Error Activity Price Changed -->
@@ -716,8 +720,6 @@
     <string name="lx_sort_by">Sorter efter</string>
     <!-- LX Sort & Filter "Categories" header -->
     <string name="lx_categories">Kategorier</string>
-    <!-- LX Sort & Filter "Filter" header -->
-    <string name="lx_filter">Filtrer</string>
 
     <!-- Tablet hotel filters -->
     <!-- "Sort By" section header -->
@@ -1892,6 +1894,10 @@
     <string name="enter_traveler_info">Oplysninger om rejsende</string>
     <!-- Traveler Details (for flights) -->
     <string name="traveler_details">Oplysninger om den primære rejsende</string>
+    <!-- AB test variate 1 - Traveler Details (for flights) -->
+    <string name="traveler_details_variate1">Indtast oplysninger om den primære rejsende</string>
+    <!-- AB test variate 2 - Traveler Details (for flights) -->
+    <string name="traveler_details_variate2">Den primære rejsende</string>
     <!-- Saved button for traveler/payment -->
     <string name="saved_button">Gemt</string>
     <!-- Edit button for traveler/payment -->
@@ -1977,8 +1983,6 @@
     <string name="cardholder">Kortindehaver</string>
     <!-- email disclaimer -->
     <string name="email_disclaimer">Din bekræftelses-e-mail vil blive sendt hertil</string>
-    <!-- Expires on colored template -->
-    <string name="expires_colored_TEMPLATE">Udløber %1$s</string>
     <!-- Label for merchandise opt out confirmation for hotel guest checkout -->
     <string name="hotel_checkout_merchandise_guest_opt_out_TEMPLATE">Jeg ønsker ikke at modtage e-mails fra {brand} med rejsetilbud, særtilbud og andre oplysninger.</string>
     <!-- Label for erchandise opt in confirmation for hotel guest checkout -->
@@ -2772,7 +2776,8 @@
     <string name="itinerary_number">Rejseplansnummer</string>
     <!-- Contact info for a country with a known support line where %s represents the phone number -->
     <string name="contact_phone_TEMPLATE">Har du spørgsmål om din reservation, bedes du ringe til {brand} på {phone}.</string>
-
+    <!-- Webview title for password recovery -->
+    <string name="title_forgot_password">Glemt adgangskode</string>
 
     <!-- Rate template strings -->
     <!-- Label for the taxes and fees for a hotel room booking. -->
@@ -2787,8 +2792,6 @@
     <!-- Expedia Accounts -->
     <!-- Label for menu item to sign into account -->
     <string name="sign_in">Log på</string>
-    <!-- Sign in blurb: descriptive second line of text on sign in button on larger screens -->
-    <string name="Earn_points_and_book_fast">Optjen point, og book endnu hurtigere.</string>
     <!-- Progress dialog text when we are signing the user into Expedia -->
     <string name="signing_in">Logger på…</string>
     <!-- Message that tells user they failed to sign in -->
