--- a/project/src/main/res/values-fr/strings.xml
+++ b/project/src/main/res/values-fr/strings.xml
@@ -596,6 +596,10 @@
     <string name="lx_select_ticket">Sélectionner des billets</string>
     <!-- Free cancellation text in offer  -->
     <string name="lx_free_cancellation">Annulation gratuite</string>
+    <!-- Message for voucherless offers  -->
+    <string name="lx_voucherless_offer">Bon électronique</string>
+    <!-- Message for voucherless offers  -->
+    <string name="lx_print_voucher_offer">Bon imprimé nécessaire</string>
     <!-- Card brand not supported (e.g. "Visa not accepted") -->
     <string name="lx_does_not_accept_cardtype_TEMPLATE">%1$s non acceptée</string>
     <!-- LX Error Activity Price Changed -->
@@ -716,8 +720,6 @@
     <string name="lx_sort_by">Trier par</string>
     <!-- LX Sort & Filter "Categories" header -->
     <string name="lx_categories">Catégories</string>
-    <!-- LX Sort & Filter "Filter" header -->
-    <string name="lx_filter">Filtrer</string>
 
     <!-- Tablet hotel filters -->
     <!-- "Sort By" section header -->
@@ -1892,6 +1894,10 @@
     <string name="enter_traveler_info">Informations sur le voyageur</string>
     <!-- Traveler Details (for flights) -->
     <string name="traveler_details">Informations sur le voyageur principal</string>
+    <!-- AB test variate 1 - Traveler Details (for flights) -->
+    <string name="traveler_details_variate1">Veuillez saisir les informations du voyageur principal</string>
+    <!-- AB test variate 2 - Traveler Details (for flights) -->
+    <string name="traveler_details_variate2">Voyageur principal</string>
     <!-- Saved button for traveler/payment -->
     <string name="saved_button">Sauvegardées</string>
     <!-- Edit button for traveler/payment -->
@@ -1977,8 +1983,6 @@
     <string name="cardholder">Titulaire de la carte</string>
     <!-- email disclaimer -->
     <string name="email_disclaimer">Votre e-mail de confirmation sera envoyé à cette adresse</string>
-    <!-- Expires on colored template -->
-    <string name="expires_colored_TEMPLATE">Valable jusqu\&apos;au %1$s</string>
     <!-- Label for merchandise opt out confirmation for hotel guest checkout -->
     <string name="hotel_checkout_merchandise_guest_opt_out_TEMPLATE">Je ne souhaite pas recevoir d\&apos;e-mail de la part de {brand} contenant des offres de voyage, des promotions et des informations diverses.</string>
     <!-- Label for erchandise opt in confirmation for hotel guest checkout -->
@@ -2772,7 +2776,8 @@
     <string name="itinerary_number">N° de voyage</string>
     <!-- Contact info for a country with a known support line where %s represents the phone number -->
     <string name="contact_phone_TEMPLATE">Si vous avez des questions au sujet de votre réservation, veuillez contacter {brand} au {phone}.</string>
-
+    <!-- Webview title for password recovery -->
+    <string name="title_forgot_password">Mot de passe oublié</string>
 
     <!-- Rate template strings -->
     <!-- Label for the taxes and fees for a hotel room booking. -->
@@ -2787,8 +2792,6 @@
     <!-- Expedia Accounts -->
     <!-- Label for menu item to sign into account -->
     <string name="sign_in">Se connecter</string>
-    <!-- Sign in blurb: descriptive second line of text on sign in button on larger screens -->
-    <string name="Earn_points_and_book_fast">Gagnez des points et réservez rapidement.</string>
     <!-- Progress dialog text when we are signing the user into Expedia -->
     <string name="signing_in">Connexion en cours…</string>
     <!-- Message that tells user they failed to sign in -->
