--- a/project/src/main/res/values-nb/strings.xml
+++ b/project/src/main/res/values-nb/strings.xml
@@ -596,6 +596,10 @@
     <string name="lx_select_ticket">Velg billetter</string>
     <!-- Free cancellation text in offer  -->
     <string name="lx_free_cancellation">Gratis avbestilling</string>
+    <!-- Message for voucherless offers  -->
+    <string name="lx_voucherless_offer">Elektronisk kupong</string>
+    <!-- Message for voucherless offers  -->
+    <string name="lx_print_voucher_offer">Utskrevet kupong kreves</string>
     <!-- Card brand not supported (e.g. "Visa not accepted") -->
     <string name="lx_does_not_accept_cardtype_TEMPLATE">%1$s ikke godkjent</string>
     <!-- LX Error Activity Price Changed -->
@@ -716,8 +720,6 @@
     <string name="lx_sort_by">Sorter etter</string>
     <!-- LX Sort & Filter "Categories" header -->
     <string name="lx_categories">Kategorier</string>
-    <!-- LX Sort & Filter "Filter" header -->
-    <string name="lx_filter">Filtrer</string>
 
     <!-- Tablet hotel filters -->
     <!-- "Sort By" section header -->
@@ -1892,6 +1894,10 @@
     <string name="enter_traveler_info">Reisendes informasjon</string>
     <!-- Traveler Details (for flights) -->
     <string name="traveler_details">Informasjon om hovedreisende</string>
+    <!-- AB test variate 1 - Traveler Details (for flights) -->
+    <string name="traveler_details_variate1">Oppgi detaljer for hovedreisende</string>
+    <!-- AB test variate 2 - Traveler Details (for flights) -->
+    <string name="traveler_details_variate2">Hovedreisende</string>
     <!-- Saved button for traveler/payment -->
     <string name="saved_button">Lagret</string>
     <!-- Edit button for traveler/payment -->
@@ -1977,8 +1983,6 @@
     <string name="cardholder">Kortholder</string>
     <!-- email disclaimer -->
     <string name="email_disclaimer">E-postbekreftelsen vil bli sendt hit</string>
-    <!-- Expires on colored template -->
-    <string name="expires_colored_TEMPLATE">Utløper %1$s</string>
     <!-- Label for merchandise opt out confirmation for hotel guest checkout -->
     <string name="hotel_checkout_merchandise_guest_opt_out_TEMPLATE">Jeg ønsker ikke å motta e-poster fra {brand} med reisetilbud, spesialsalg og annen informasjon.</string>
     <!-- Label for erchandise opt in confirmation for hotel guest checkout -->
@@ -2772,7 +2776,8 @@
     <string name="itinerary_number">Reiserutenummer</string>
     <!-- Contact info for a country with a known support line where %s represents the phone number -->
     <string name="contact_phone_TEMPLATE">Ring {brand} på {phone} dersom du har spørsmål vedrørende bestillingene dine.</string>
-
+    <!-- Webview title for password recovery -->
+    <string name="title_forgot_password">Glemt passord?</string>
 
     <!-- Rate template strings -->
     <!-- Label for the taxes and fees for a hotel room booking. -->
@@ -2787,8 +2792,6 @@
     <!-- Expedia Accounts -->
     <!-- Label for menu item to sign into account -->
     <string name="sign_in">Logg på</string>
-    <!-- Sign in blurb: descriptive second line of text on sign in button on larger screens -->
-    <string name="Earn_points_and_book_fast">Tjen opp poeng og bestill hurtig.</string>
     <!-- Progress dialog text when we are signing the user into Expedia -->
     <string name="signing_in">Logger på…</string>
     <!-- Message that tells user they failed to sign in -->
@@ -2876,7 +2879,7 @@
     <!-- Contact Expedia via website -->
     <string name="contact_expedia_website">Nettsted</string>
     <!-- Label for "Expedia website" button in info page -->
-    <string name="website_TEMPLATE">{brand}Nettsted</string>
+    <string name="website_TEMPLATE">{brand}s nettsted</string>
     <!-- Label for "app support" button in info page -->
     <string name="app_support">App-støtte</string>
     <!-- Label for link to terms and conditions -->
@@ -3205,7 +3208,7 @@
     <string name="country_ng">Nigeria</string>
     <string name="country_nu">Niue</string>
     <string name="country_nf">Norfolk Island</string>
-    <string name="country_mp">Northern Mariana Islands</string>
+    <string name="country_mp">Nord-Marianene</string>
     <string name="country_no">Norge</string>
     <string name="country_om">Oman</string>
     <string name="country_pk">Pakistan</string>
